Añadida version tablet y laptop, corregido algunos erros en version movil

--- a/index.html
+++ b/index.html
@@ -38,11 +38,12 @@
         <main class="main">
           <section class="me">
             <article class="hero">
-              <h1 class="hero__title">Nice to meet you! I'm <span class="hero__title-underline">Adam Keyes.</span></h1>
+              <h1 class="hero__title">Nice to <br class="hero__jump"> meet you! I'm <span class="hero__title-underline">Adam Keyes.</span></h1>
               <p class="hero__description">Based in the UK, I’m a front-end developer passionate about building accessible web apps that users love.</p>
               <img src="./src/assets/images/adam_photo.png" alt="Adam's profile photo" class="hero__photo">
               <a href="#" class="hero__link link">CONTACT ME</a>
               <img src="./src/assets/images/aver.svg" class="decoration__circles" alt="">
+              <img src="./src/assets/images/decorative_circles2.svg" class="decoration__circles-whole" alt="">
             </article>
             <article class="numbers">
               <div class="numbers__container">
@@ -83,7 +84,7 @@
                 <div class="project__text"></div>
                 <h5 class="project__title">DESING PORTFOLIO</h5>
                 <p class="project__langages">HTML CSS</p>
-                <div class="projects__links">
+                <div class="projects__links overlay">
                   <a href="#" class="project__link link">VIEW PROJECT</a>
                   <a href="#" class="project__link link">VIEW CODE</a>
                 </div>
@@ -92,7 +93,7 @@
                 <img src="./src/assets/images/landing_page.png" alt="" class="project__image">
                 <h5 class="project__title">E-LEARNING LANDING PAGE</h5>
                 <p class="project__langages">HTML CSS</p>
-                <div class="projects__links">
+                <div class="projects__links overlay">
                   <a href="#" class="project__link link">VIEW PROJECT</a>
                   <a href="#" class="project__link link">VIEW CODE</a>
                 </div>
@@ -101,7 +102,7 @@
                 <img src="./src/assets/images/todo_web.png" alt="" class="project__image">
                 <h5 class="project__title">TODO WEB APP</h5>
                 <p class="project__langages">HTML CSS JAVASCRIPT</p>
-                <div class="projects__links">
+                <div class="projects__links overlay">
                   <a href="#" class="project__link link">VIEW PROJECT</a>
                   <a href="#" class="project__link link">VIEW CODE</a>
                 </div>
@@ -110,7 +111,7 @@
                 <img src="./src/assets/images/entertainment_web.png" alt="" class="project__image">
                 <h5 class="project__title">ENTERTAINMENT WEB APP</h5>
                 <p class="project__langages">HTML CSS JAVASCRIPT</p>
-                <div class="projects__links">
+                <div class="projects__links overlay">
                   <a href="#" class="project__link link">VIEW PROJECT</a>
                   <a href="#" class="project__link link">VIEW CODE</a>
                 </div>
@@ -119,7 +120,7 @@
                 <img src="./src/assets/images/memory_game.png" alt="" class="project__image">
                 <h5 class="project__title">MEMORY GAME</h5>
                 <p class="project__langages">HTML CSS JAVASCRIPT</p>
-                <div class="projects__links">
+                <div class="projects__links overlay">
                   <a href="#" class="project__link link">VIEW PROJECT</a>
                   <a href="#" class="project__link link">VIEW CODE</a>
                 </div>
@@ -128,7 +129,7 @@
                 <img src="./src/assets/images/art_gallery.png" alt="" class="project__image">
                 <h5 class="project__title">ART GALLERY SHOWCASE</h5>
                 <p class="project__langages">HTML CSS JAVASCRIPT</p>
-                <div class="projects__links">
+                <div class="projects__links overlay">
                   <a href="#" class="project__link link">VIEW PROJECT</a>
                   <a href="#" class="project__link link">VIEW CODE</a>
                 </div>
@@ -147,6 +148,7 @@
                 <textarea name="user_form" id="" cols="10" rows="5" class="contact__textarea input" placeholder="MESSAGE"></textarea>
                 <button class="contact__button link" type="submit">SEND MESSAGE</button>
                 <img src="./src/assets/images/aver.svg" class="decoration__circles-contact" alt="">
+                <img src="./src/assets/images/decorative_circles2.svg" class="decoration__circles-contact-whole" alt="">
               </form>              
             </article>
           </section>
@@ -157,22 +159,22 @@
             <ul class="footer__menu menu">
               <li class="menu__item">
                 <a href="https://github.com/JesusLaso/jesuslaso" class="menu__link ">
-                  <img src="./src/assets/icons/github_icon.svg" class="menu__icon" alt="Icono de GitHub">
+                  <i class="fa-brands fa-github menu__icon footer__icon"></i>
                 </a>
               </li>
               <li class="menu__item">
                 <a href="#" class="menu__link">
-                  <img src="./src/assets/icons/notsure_icon.svg" class="menu__icon" alt="Icono de Not Sure">
+                  <i class="fa-brands fa-discord menu__icon footer__icon"></i>
                 </a>
               </li>
               <li class="menu__item">
                 <a href="https://www.linkedin.com/in/joaquin-de-jesus-laso-perez-764a59151/" class="menu__link">
-                  <img src="./src/assets/icons/linkedin_icon.svg" class="menu__icon" alt="Icono de LinkedIn">  
+                  <i class="fa-brands fa-linkedin menu__icon footer__icon"></i>  
                 </a>
               </li>
               <li class="menu__item">
                 <a href="https://www.twitter.com" class="menu__link">
-                  <img src="./src/assets/icons/twitter_icon.svg" class="menu__icon" alt="Icono de Twitter">  
+                <i class="fa-brands fa-twitter menu__icon footer__icon"></i>              
                 </a>
               </li>
             </ul>
